Positioning Fixes
Fixed positioning of page elements to fix issues with large browser windows. Cards would become hidden behind other cards and the user interface needed some tweaks

--- a/flip card project/css.css
+++ b/flip card project/css.css
@@ -16,6 +16,7 @@
 	height:200px;
 	background-color:black;
 	border:white solid 2px;
+	opacity: .6;
 }
 #results{
 	font-size: 40px;
@@ -33,18 +34,27 @@ html, body{
 	color:white;
 	font-family: 'Quicksand', sans-serif;
 }
-.background{
-	background-color:black;
-	background-size: cover;
-	background-image:url("images/casino.jpg");
-	position: fixed;
-	min-width:100%;
-	min-height:100%;
-	filter:brightness(70%) blur(6px);
-	z-index: -1;
+body{
+	display: flex;
+    height: 100%;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+}
+}
+.gamebackground{
+	background-color: #eee;
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    z-index: -1;
 }
 /*HEADS UP DISPLAY*/
 #hud{
+	position: absolute;
+	left: 0;
+	top: 0;
 	background-color:black;
 	font-size:50px;
 	width: 100%;
@@ -70,10 +80,10 @@ html, body{
 }
 	#hud{
 		grid-area:hud;
-		box-shadow: 2px 2px 10px black;
 		padding-bottom:15px;
 	}
 	.body{
+		min-width: 1024px;
 		position:relative;
 		grid-area:body;
 		margin-left:10px;
@@ -240,14 +250,12 @@ html, body{
 	}
 	#buttonGrid{
 		float:right;
-		width:33vw;
-		height:100%;
 		margin:10px;
+		max-width: 600px;
 
 		display:grid;
 		grid-template-columns: 2fr 2fr;
 		grid-template-rows: 2fr 2fr;
-		grid-gap:1vw;
 		grid-template-areas:
 		"Hit Double"
 		"Stay Surrender"
@@ -257,12 +265,11 @@ html, body{
 			background:transparent;
 			background-color:black;
 			border:2px solid white;
-			font-size: 2vw;
+			font-size: 2em;
 		}
 		.buttonStyle:hover{
 			background-color:white;
 			color:black;
-			font-size: 23pt;
 		}
 .screen{
 	visibility: hidden;
